alignment fix

--- a/src/style/portfolio.scss
+++ b/src/style/portfolio.scss
@@ -2,7 +2,8 @@
 	background-color: black;
 	height: auto;
 	text-align: center;
-
+	width: 100%;
+	margin: 0 auto;
 	margin-top: 120px;
 	margin-bottom: 40px;
 	color: white;
@@ -25,6 +26,8 @@
 }
 
 .work-list {
+	width: 80%;
+	margin: 0 auto;
 	padding-bottom: 40px;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
@@ -97,6 +100,7 @@
 @media (max-width: 600px) {
 	.work-list {
 		grid-template-columns: 1fr;
+		width: 90%;
 	}
 
 	.job-container {
@@ -125,6 +129,7 @@
 }
 @media (max-width: 900px) {
 	.work-list {
+		width: 80%;
 		grid-template-columns: 1fr;
 	}
 }
